--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,8 @@
-aiofiles==23.2.1
-fastapi==0.111.0
+aiofiles==24.1.0
+fastapi==0.115.4
 fastapi-cli==0.0.4
 fastapi_cors==0.0.6
 python-dotenv==1.0.1
-uvicorn==0.30.1
+uvicorn==0.32.0
+groq==0.13.1
+openai==1.58.1
